--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     background: #263238;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 p {
@@ -38,6 +39,7 @@ p {
 
 .flipping {
     transition: all 1s ease-in-out;
+    z-index: 100;
 }
 
 
@@ -51,11 +53,14 @@ p {
 
 .flipper.flipped .card {
     -webkit-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
 }
 
 .card {
     -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
     -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
     transition: all 1s ease-in-out;
     position: relative;
     width: 100%;
@@ -66,6 +71,7 @@ p {
 .card > .front,
 .card > .back {
     -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     position: absolute;
